--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+nbproject/private/private.xml
+build/built-jar.properties
+nbproject/private/private.properties
+
+# Created by https://www.gitignore.io/api/java
+# Edit at https://www.gitignore.io/?templates=java
+
+### Java ###
 # Compiled class file
 *.class
 
@@ -21,3 +29,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# End of https://www.gitignore.io/api/java
+src/connect/connect.java
